2005-11-30  David Hampton  <hampton@employees.org>

	* various: More trivial conversions from deprecated gtk/gnome
	functions to supported functions.

2005-11-29  David Hampton  <hampton@employees.org>

	* src/gnome-utils/gw-gnome-utils-spec.scm:
	* src/gnome-utils/dialog-utils.[ch]: Remove unused function.

	* various: More syntactic sugar converting from gtk_object_xxx
	functions to g_object_xxx functions.

	* various: Syntactic sugar converting from gtk_signal_xxx
	functions to g_signal_yyy functions.

	* src/gnome-utils/gnc-gnome-utils.c:
	* src/gnome-utils/gnc-html-guppi.[ch]:
	* src/gnome-utils/Makefile.am:
	* src/gnome-utils/gnc-html.c:
	* src/gnome/Makefile.am:
	* lib/Makefile.am:
	* lib/README:
	* lib/guppi-legend.patch:
	* configure.in: Remove all remaining references to guppi.

	* rpm/gnucash.spec.in: Quick update for 2.0 requirements.  Needs
	to actually be tested.

	* src/import-export/qif/qif-parse.c:
	* src/import-export/hbci/druid-hbci-initial.c:
	* src/import-export/hbci/hbci-interaction.c:
	* src/import-export/hbci/druid-hbci-utils.c:
	* src/import-export/hbci/dialog-hbcitrans.c:
	* src/import-export/hbci/gnc-hbci-trans-templ.[ch]:
	* src/gnome-utils/gnc-tree-model-account.c:
	* src/gnome/dialog-sx-from-trans.c:
	* src/gnome/dialog-scheduledxaction.c:
	* configure.in: Eliminate all remaining use of deprecated glib
	functions.  Enable the compile time flag to prevent any of these
	deprecated routines from creeping back into the source.

2005-11-28  David Hampton  <hampton@employees.org>

	* src/import-export/qif-import/qif-to-gnc.scm:
	* src/import-export/qif-import/qif-merge-groups.scm:
	* src/import-export/qif-import/qif-file.scm:
	* src/import-export/hbci/hbci-interaction.c:
	* src/gnome/gw-gnc-spec.scm:
	* src/gnome/dialog-progress.[ch]: Migrate from the deprecated
	gtk_progress interface to the supported gtk_progress_bar.
	
	* src/import-export/qif-import/druid-qif-import.c: Need to escape
	user input string to prevent errors from gtk.
